prometheus (1.2.3+ds2-5) UNRELEASED; urgency=medium

  * Last test failures were actually problems with fsnotify+gccgo.
    Throwing the towel on it: prometheus will only compile with golang-go for
    now.

 -- Martín Ferrari <tincho@debian.org>  Thu, 01 Dec 2016 15:09:51 +0100

prometheus (1.2.3+ds2-4) unstable; urgency=high

  * Remove unneeded dependencies.
  * Increase test timeouts (some tests still failing on slow arches),
    and re-enable disabled tests on arm.

 -- Martín Ferrari <tincho@debian.org>  Thu, 01 Dec 2016 12:07:27 +0100

prometheus (1.2.3+ds2-3) unstable; urgency=high

  * Re-enable buildflags (needed for version information), which were
    removed by mistake.
  * Avoid conflicts with vendored dependencies when compiling with gccgo.
  * Disable TestDropMetrics, which is flaky in armel and has been
    preventing transition to testing (raising urgency).

 -- Martín Ferrari <tincho@debian.org>  Wed, 30 Nov 2016 11:28:54 +0100

prometheus (1.2.3+ds2-2) unstable; urgency=medium

  * Fix the new datetime picker control (was not working at all).
    Closes: #844513.
  * Replace libjs-handlebars with libjs-mustache. Closes: #835661.
  * Add dependency on new golang-golang-x-oauth2-google-dev.

 -- Martín Ferrari <tincho@debian.org>  Thu, 17 Nov 2016 05:59:48 +0000

prometheus (1.2.3+ds2-1) unstable; urgency=high

  * The "We had all the monitoring and alerting, yet the worst still happened"
    release.
  * New source release, removing the vendoring of bootstrap-datetimepicker.
  * Switch to golang-google-cloud-compute-metadata-dev dep.
  * Backport math fixes from 1.3.1 that fix build issues in armel (raising
    urgency). Hopefully prometheus will enter testing again now.

 -- Martín Ferrari <tincho@debian.org>  Wed, 09 Nov 2016 21:07:14 +0000

prometheus (1.2.3+ds-2) unstable; urgency=medium

  * Correct extra unneeded deps (the relevant parts are already vendored-in).

 -- Martín Ferrari <tincho@debian.org>  Fri, 04 Nov 2016 00:54:10 +0000
